# NetScope

./: .gitignore  README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
.claude/: settings.local.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/netscope/app/: MainActivity.kt  SampleApplication.kt
app/src/main/kotlin/indi/arrowyi/netscope/app/: MainActivity.kt  SampleApplication.kt
app/src/main/res/layout/: activity_main.xml
docs/: AGENT_HANDOFF.md  AOP_INTEGRATION.md  BYTEHOOK_LESSONS.md  HOOK_EVOLUTION.md
docs/superpowers/plans/: 2026-04-20-netscope-sdk-implementation.md
docs/superpowers/specs/: 2026-04-20-netscope-sdk-design.md
netscope-hook/: build.gradle  consumer-rules.pro
netscope-hook/src/main/cpp/: CMakeLists.txt  fd_table.c  fd_table.h  got_patcher.c  got_patcher.h  hook_jni.c  socket_proxy.c  socket_proxy.h
netscope-hook/src/main/kotlin/indi/arrowyi/netscope/hook/: NetScopeHook.kt  SocketStats.kt  SocketTotalStats.kt
netscope-plugin/: build.gradle  settings.gradle
netscope-plugin/src/main/kotlin/indi/arrowyi/netscope/plugin/: NetScopePlugin.kt  NetScopeTransform.kt
netscope-plugin/src/main/kotlin/indi/arrowyi/netscope/plugin/instrumenter/: OkHttpBuilderInstrumenter.kt  OkHttpWebSocketInstrumenter.kt  UrlConnectionInstrumenter.kt
netscope-plugin/src/test/kotlin/indi/arrowyi/netscope/plugin/: NetScopeTransformDedupeTest.kt  NetScopeTransformPrefilterTest.kt  NetScopeTransformScopeTest.kt  OkHttpWebSocketInstrumenterTest.kt
netscope-sdk/: build.gradle  consumer-rules.pro
netscope-sdk/src/androidTest/kotlin/com/netscope/sdk/: NetScopeInstrumentedTest.kt
netscope-sdk/src/androidTest/kotlin/indi/arrowyi/netscope/sdk/: NetScopeInstrumentedTest.kt
netscope-sdk/src/androidTest/kotlin/indi/arrowyi/sdk/: NetScopeInstrumentedTest.kt
netscope-sdk/src/main/cpp/: CMakeLists.txt  netscope_jni.cpp  netscope_log.h
netscope-sdk/src/main/cpp/core/: dns_cache.cpp  dns_cache.h  flow_table.cpp  flow_table.h  stats_aggregator.cpp  stats_aggregator.h
netscope-sdk/src/main/cpp/hook/: bytehook_runtime.cpp  bytehook_runtime.h  got_audit.cpp  got_audit.h  hook_close.cpp  hook_close.h  hook_connect.cpp  hook_connect.h  hook_conscrypt.cpp  hook_conscrypt.h  hook_dns.cpp  hook_dns.h  hook_manager.cpp  hook_manager.h  hook_send_recv.cpp  hook_send_recv.h  hook_stubs.cpp  hook_stubs.h  libc_funcs.cpp  libc_funcs.h
netscope-sdk/src/main/cpp/utils/: ip_utils.cpp  ip_utils.h  tls_sni_parser.cpp  tls_sni_parser.h
netscope-sdk/src/main/kotlin/com/netscope/sdk/: DomainStats.kt  LogcatReporter.kt  NetScope.kt  NetScopeNative.kt
netscope-sdk/src/main/kotlin/indi/arrowyi/netscope/sdk/: ApiStats.kt  CppApiStats.kt  DomainStats.kt  HookReport.kt  LogcatReporter.kt  NetScope.kt  NetScopeNative.kt  Status.kt  TotalStats.kt
netscope-sdk/src/main/kotlin/indi/arrowyi/netscope/sdk/integration/: NetScopeInstrumented.kt  NetScopeInterceptor.kt  NetScopeUrlConnection.kt  NetScopeWebSocket.kt
netscope-sdk/src/main/kotlin/indi/arrowyi/netscope/sdk/internal/: CppTrafficAggregator.kt  EndpointFormatter.kt  PathNormalizer.kt  SystemTrafficReader.kt  TrafficAggregator.kt
netscope-sdk/src/main/kotlin/indi/arrowyi/sdk/: DomainStats.kt  LogcatReporter.kt  NetScope.kt  NetScopeNative.kt
netscope-sdk/src/test/kotlin/indi/arrowyi/netscope/sdk/: CppTrafficAggregatorTest.kt  NetScopeTotalStatsTest.kt  TrafficAggregatorTest.kt
netscope-sdk/src/test/kotlin/indi/arrowyi/netscope/sdk/integration/: NetScopeUrlConnectionTest.kt
netscope-sdk/src/test/kotlin/indi/arrowyi/netscope/sdk/internal/: EndpointFormatterTest.kt  PathNormalizerTest.kt
